RESOLVED FIXED241166
[LFC][FFC] DOM order may not be sufficient when constructing the LogicalFlexItemList
https://bugs.webkit.org/show_bug.cgi?id=241166
Summary [LFC][FFC] DOM order may not be sufficient when constructing the LogicalFlexI...
alan
Reported 2022-05-31 19:05:07 PDT
ssia
Attachments
Patch (2.53 KB, patch)
2022-05-31 19:09 PDT, alan
ews-feeder: commit-queue-
alan
Comment 1 2022-05-31 19:07:21 PDT
This has regressed with the refactoring patch when core flex layout got moved to a dedicated class and struct FlexItem was introduced.
alan
Comment 2 2022-05-31 19:09:28 PDT
EWS
Comment 3 2022-05-31 22:27:48 PDT
Committed r295081 (251176@main): <https://commits.webkit.org/251176@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 459917 [details].
Radar WebKit Bug Importer
Comment 4 2022-05-31 22:28:13 PDT
Note You need to log in before you can comment on or make changes to this bug.