DOM order may not be sufficient when constructing the LogicalFlexItemList https://bugs.webkit.org/show_bug.cgi?id=241166

Reviewed by Antti Koivisto.

We need to hold on to a reference to the layout box in case logical order != DOM order.

* Source/WebCore/layout/formattingContexts/flex/FlexFormattingContext.cpp:
(WebCore::Layout::FlexFormattingContext::convertFlexItemsToLogicalSpace):

Canonical link: https://commits.webkit.org/251176@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295081 268f45cc-cd09-0410-ab3c-d52691b4dbfc